<resources>
    <string name="app_name">HRV Group</string>

    <string name="title">Устройства</string>
    <string name="unknown_device">Неизвестное устройство</string>
    <string name="unknown_status">неизвестно</string>
    <string name="unsupported_status">Не поддерживается</string>
    <string name="error_status">Ошибка</string>
    <string name="disconnected_status">Откючено</string>
    <string name="connecting_status">Подключается</string>
    <string name="connected_status">Подключено</string>
    <string name="disconnecting_status">Отключается</string>
    <string name="connected">Подключено</string>
    <string name="disconnected">Отключено</string>

    <string name="title_activity_overview">OverviewActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="device_total_count">Всего устройств :</string>
    <string name="no_data">NA</string>
    <string name="device_active_count">Активных устройств :</string>
    <string name="device_longest_update">Наибольшее ожидание :</string>
    <string name="latency_format" formatted="false">%.1fс</string>
    <string name="active_count_format" formatted="false">%d/%d</string>
    <string name="menu_scan">Найти</string>
    <string name="menu_stop">Стоп</string>
    <string name="transmitting_status">Передача</string>
    <string name="closing_status">Закрывается</string>
    <string name="menu_exit">выход</string>
</resources>
