<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.OverviewActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <item android:id="@+id/menu_scan"
            android:title="@string/menu_scan"
            android:orderInCategory="100"
            app:showAsAction="ifRoom|withText"/>
        <item android:id="@+id/menu_stop"
            android:title="@string/menu_stop"
            android:orderInCategory="101"
            android:visible="false"
            app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/menu_exit"
        android:title="@string/menu_exit"
        android:orderInCategory="102"
        android:visible="true"
        app:showAsAction="ifRoom|withText"/>
</menu>