<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="RtlHardcoded">


    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            >

    <TextView
        android:id="@+id/device_total_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/device_total_count"
     />
    <TextView
        android:id="@+id/device_total_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/device_total_count_label"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:text="@string/no_data"
        />
    <TextView
        android:id="@+id/device_active_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/device_total_count_label"
        android:text="@string/device_active_count"
        />
    <TextView
        android:id="@+id/device_active_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/device_active_count_label"
        android:layout_below="@id/device_total_count"
        android:layout_marginLeft="5dp"
        android:text="@string/no_data"
        />
    <TextView
        android:id="@+id/device_longest_update_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/device_active_count_label"
        android:text="@string/device_longest_update"
        />
    <TextView
        android:id="@+id/device_longest_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/device_longest_update_label"
        android:layout_below="@id/device_active_count"
        android:layout_marginLeft="5dp"
        android:text="@string/no_data"
        />

            <TextView
                android:id="@+id/device_bluetooth_stat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/device_longest_update"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/no_data"
                />

        </RelativeLayout>

    <LinearLayout
        android:id="@+id/device_counts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/device_max_active_count"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:gravity="center_vertical"
            android:text="@string/no_data"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <Button
            android:id="@+id/button_inc"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentTop="true"
            android:padding="1dp"
            android:gravity="center"
            android:text="+"/>
        <Button
            android:id="@+id/button_dec"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:padding="1dp"
            android:gravity="center"
            android:text="-"/>
        </LinearLayout>

    </LinearLayout>
    </RelativeLayout>

    <GridView
        android:id="@+id/pulses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/title_layout"
        android:numColumns="auto_fit"
        />



</RelativeLayout>
